--- a/advanced_topics.qmd
+++ b/advanced_topics.qmd
@@ -12,6 +12,92 @@ library(dplyr)
 pums_person <- open_dataset("./data/person")
 ```
 
+In this chapter we're going to look at advanced data manipulation topics.
+We'll be looking in more detail at how bindings from R functions to Acero bindings work, as well as the converse of this - functions which exist in Acero, and don't have tidyverse or base R equivalents, and how you can access these in your arrow pipelines.
+
+We're going to explore how you can get around edge cases where functions you want to use inside dplyr functions don't have an Acero function to be mapped to directly, but you can still use them by calling back into R to do these calculations.
+Finally, we'll look at a practical case of extending Arrow to work with the specialist data types found in the geospatial domain.
+
+## Acero bindings
+
+In Chapter [data manip whatever] we mentioned that the arrow R package transforms dplyr syntax into Arrow Expressions which can be understood by Acero, and here we're going to give into that a little deeper.  
+
+Acero, arrow's query engine, has a large number of functions implemented for performing calculations on data.  The complete list can be found in the docs here: https://arrow.apache.org/docs/cpp/compute.html#available-functions
+
+Some of these functions have the same names are the R equivalent, for example, both Acero and R have a `min()` function which can be used to find the lowest value in an vector or array of values.  
+
+Other functions have slightly different names; whereas R has `sd()` for calculating the standard deviation of a vector, Acero has `stddev`.  
+
+There are also some differences in the options for these functions; while R's `sd` function has arguments `x`, the value to be passed in and `na.rm`, whether to remove `NA` values or not, Acero#s stddev also has `ddof` - denominator degrees of freedom, `skip_nulls`, the equivalent of `na_rm`, and `min_count` - if there are fewer values than this, return null.
+
+<!-- add screenshot of sd docs page and then screenshot of varianceoptions and stddev
+https://arrow.apache.org/docs/cpp/api/compute.html#_CPPv4N5arrow7compute15VarianceOptionsE
+https://arrow.apache.org/docs/cpp/compute.html#available-functions
+-->
+
+This also highlights the slight different in terminology here; whereas R has separate concepts of NA and NULL, Arrow considers them to be the same things. 
+
+You don't have to worry about these differences yourself though, as the code in the arrow R package does a direct translation from one to the other.  Let's take a closer look at an example.
+
+Let's say we wanted to only return data for states whose names start with the letter "w".  We can take our dataset and use `dplyr::filter()` to return this subset.
+We need to pick a function to pass to `dplyr::filter()` to actually *do* the filtering.
+
+Let's start first by looking at the Acero function we want Arrow to use.
+We wouldn't usually ever have to do this when working with Arrow, but it's useful in understanding how this all works.
+
+If we look at the Acero compute function docs, we'll see that there is a function `starts_with` which does this. It has 2 options - `pattern` the substring to match at the start of the string, and `ignore_case`, whether the matching should be case sensitive.
+
+<!-- picture -->
+
+So how do we use this from the arrow R package?
+We start off by considering which R function to use.  Let's go with the base R function `startsWith()`.
+
+<!-- picture -->
+
+This function has an Acero mapping, and we can see this by creating our query but not actually executing it, but instead looking at the query we generate
+
+```{r}
+#| label: startsWith
+open_dataset("data/person/") |> 
+  select(location) |> 
+  filter(startsWith(x = location, prefix = "w"))
+```
+
+Some information about the Acero mapping is shown here, in the line which starts with "* Filter" - this contains a human-readable representation of the Arrow Expression created.
+
+It shows that that `startsWith()` has been translated to the Acero function `starts_with()`.
+The options for the Acero function have been set based on the values which were passed in via the R expression.
+We set the `startsWith()` argument `prefix` to "w", which was passed to the Acero `starts_with()` option called `pattern`.
+As `startsWith()` is always case-sensitive, the Acero `starts_with()` option `ignore_case` has been set to `false`.
+
+This approach is great for the most typical case where we know the R function we want to use as arrow automatically translates to the relevant Acero function, but what about if we just want to start with Acero functions?
+
+We can view the full list of Acero functions avaialable to use in arrow by calling `list_compute_functions()`.  At the time of writing there were 262 Acero functions available to use in R.
+
+```{r}
+#| label: list_compute_functions
+list_compute_functions() |> 
+  head(10)
+```
+
+You can also use these functions in your arrow dplyr pipelines by passing them to `call_function()`.
+Let's take a look at how we'd do that with the Acero function `starts_with()`.
+
+# TODO: work out how to get this working!!
+```{r}
+#| label: starts_with_call_directly
+open_dataset("data/person/") |> 
+  select(location) |> 
+  filter(
+    
+      arrow_starts_with(
+        location,
+        pattern = "w",
+        ignore_case = FALSE
+      )
+    
+  )
+```
 ## User-defined functions {#sec-UDF}
 
 We described how to use functions in dplyr pipelines in [Section @sec-dplyr-use-funcs], but what if you want to use a function which doesn't have an arrow binding?
