--- a/cloud.qmd
+++ b/cloud.qmd
@@ -13,7 +13,12 @@ If you want to read a single file directly into memory, you can pass a URL direc
 
 ```{r}
 #| label: read_parquet_url
-read_parquet("https://github.com/apache/arrow/raw/main/r/inst/v0.7.1.parquet")
+read_parquet(
+  paste0(
+    "https://github.com/apache/arrow/raw/main/r/inst/", 
+    "v0.7.1.parquet"
+  )
+)
 ```
 
 If you want to work with multi-file datasets, however, the HTTP protocol isn't compatible with Arrow's ability to scan files and read metadata before data is accessed to optimize what is eventually pulled into memory upon collecting a query.
@@ -64,7 +69,10 @@ To open a file or dataset saved in cloud storage, instead of passing in a path t
 ```{r}
 #| label: open_parquet_s3
 #| eval: false
-read_parquet("s3://scaling-arrow-pums/person/year=2005/location=ak/part-0.parquet")
+read_parquet(
+  paste0("s3://scaling-arrow-pums/person/year=2005/", 
+         "location=ak/part-0.parquet")
+)
 open_dataset("s3://scaling-arrow-pums/person/")
 ```
 
@@ -74,7 +82,11 @@ The equivalent of the above commands for GCS---these won't run here as these buc
 ```{r}
 #| label: open_parquet_gcs
 #| eval: false
-read_parquet("gs://anonymous@scaling-arrow-pums/person/year=2005/location=ak/part-0.parquet")
+read_parquet(
+  paste0("gs://anonymous@scaling-arrow-pums/person/year=2005/", 
+         "location=ak/part-0.parquet"
+        )
+)
 open_dataset("gs://anonymous@scaling-arrow-pums/person/")
 ```
 
@@ -499,7 +511,10 @@ This means that if you want to connect to a GCS instance without providing authe
 ```{r}
 #| label: gcs-anon
 #| eval: false
-bucket <- gs_bucket("scaling-arrow-pums/person/", anonymous = TRUE)
+bucket <- gs_bucket(
+  "scaling-arrow-pums/person/",
+  anonymous = TRUE
+)
 ```
 
 ### Manually pass in credentials
@@ -517,9 +532,9 @@ In AWS S3, this is done using your login, `access_key` and password, `secret_key
 #| label: private_bucket
 #| eval: false
 secret_data <- s3_bucket(
-  "my_secret_bucket_name",
+  "secret_bucket_name",
   access_key = "nic",
-  secret_key = "1234567890"
+  secret_key = "12345"
 )
 ```
 
@@ -528,7 +543,7 @@ Similarly, you can pass all of these details in as a single URI string.
 ```{r}
 #| label: private_bucket-uri
 #| eval: false
-secret_data <- s3_bucket("s3://nic:1234567890@my_secret_bucket_name")
+secret_data <- s3_bucket("s3://nic:12345@secret_bucket_name")
 ```
 
 #### GCS
@@ -539,8 +554,8 @@ In GCS, you'll need to get an access token and its expiration date, which you ca
 #| label: private_bucket_gcs
 #| eval: false
 secret_data <- gs_bucket(
-  "my_secret_bucket_name",
-  access_token = "ab12.ABCS6ZRVmB7fkLtd1XTmq6mo0S1wqZZi3-Lh_s-6Uw7p8vtgSwg",
+  "secret_bucket_name",
+  access_token = "ab12.ABCS6ZRVmB7fkLtd1XTmq6mo0s-6Uw7p8vtgSwg",
   expiration = as.POSIXct("2024-08-09 12:00:00")
 )
 ```
